networking/apm.yml
---
apiVersion: v1
kind: Service
metadata:
  name: apm-server
  labels:
    app: apm-server
spec:
  ports:
  - port: 8200
    targetPort: 8200
    # name: http
    # nodePort: 31000
  selector:
    app: apm-server
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apm-server
spec:
  # this replicas value is default
  # modify it according to your case
  replicas: 1
  selector: 
    matchLabels:
        app: apm-server
  template:
    metadata:
      labels:
        app: apm-server
    spec:
      containers:
      - name: apm-server
        image: docker.elastic.co/apm/apm-server:7.9.0
        ports:
        - containerPort: 8200
        volumeMounts:
        - name: apm-server-config
          mountPath: /usr/share/apm-server/apm-server.yml
          readOnly: true
          subPath: apm-server.yml
      volumes:
      - name: apm-server-config
        configMap:
          name: apm-server-config
